app/assets/stylesheets/cims.scss
/* ... */
/* Specs  ----------- */

.flexblock.plans li ul li {
  width: 100%;
  padding: .8rem 3.2rem;
  text-align: left;
  display: block;
}

@media (min-width:1024px) {
  .flexblock.plans {
    margin-right: -2%;
    margin-left: -2%;
  }
  .flexblock.plans>li {
    margin-right: 2%;
    margin-left: 2%;
    width: 29%;
  }
  .plans>li:hover,
  .plans>li:nth-child(2) {
    position: relative;
    z-index: 2;
    transform: scale(1.08);
  }
  .plans:hover li:nth-child(2):not(:hover) {
    position: relative;
    z-index: 1;
    transform: scale(1);
  }
  .medium-font{
    font-size: 1.9rem
  }
}


/*===========================================
6.9 Block Activity <ul class="activity">
CV / News
============================================= */

.flexblock.activity {
  -webkit-flex-direction: column;
  flex-direction: column;
}

.activity li {
  position: relative;
  -webkit-flex: 1;
  flex: 1;
  width: auto;
}

.activity p {
  vertical-align: top;
  margin-bottom: 0;
}

.activity img {
  display: block;
  margin:9px auto
}

.activity .year,
.activity .title {
  display: inline-block;
  font-weight: 600;
  line-height: 2rem
}

.activity .summary {
  width: 100%;
  strong{
    font-size:2rem
  }
  span{
    font-size: 2rem
  }
}
.activity .testimony{
  img{ max-width: 17rem }
}
@media (min-width: 768px) {
  .activity p {
    float: left;
  }
  .activity .year {
    width: 24%;
  }
  .activity .title {
    width: 27%;
    margin-right: 4%;
    margin-left: 4%;
  }
  .activity .summary {
    width: 64%;
  }
  .activity .company {
    width: 23%;
  }
  .activity .listing {
    width: 76%;
  }
  .activity .listing {
    width: 76%;
  }
}
@media (min-width: 768px) {
  .activity.two-column .year {
    width: 45%;
  }
  .activity.two-column .title {
    width: 27%;
    margin-right: 4%;
    margin-left: 4%;
  }
  .activity.two-column .summary {
    width: 50%;
    padding-right: 10px
  }
  .activity.two-column .company {
    width: 23%;
  }
  .activity.two-column .listing {
    width: 76%;
  }
  .activity.two-column .listing {
    width: 76%;
  }
  .flex-grid.sm-imgs{
    img{
      max-height: 6.3em!important;
    }
  }
}

.flex-grid {
  display: flex;
}
.flex-grid .col {
  flex: 1;
  img{
    max-height: 8em
  }
  @media (max-width:768px){
    img{
      max-height: none;
    }
  }
}


.flex-grid-thirds {
  display: flex;
  justify-content: space-between;
}
.flex-grid-thirds .col {
  width: 32%;
}

@media (max-width: 768px) {
  .flex-grid,
  .flex-grid-thirds {
    display: block;
    .col {
      width: 100%;
      margin: 0 0 10px 0;
    }
  }
}


.persons img{
  max-width: 16rem
}

.company img{
  padding: 0 4rem;
}

.stretch-bottom{
  width: 100%;
  margin: 0;
  padding: 25px 65px 50px;
  right: 0;
  position: absolute;
  left: 0;
  bottom: 0;
}

/*=========================================
.flexblock sublist
=========================================== */

.flexblock li li,
.flexblock.blink li li {
  padding: 0;
  width: 100%;
}

/*.flexblock li li:before {
  position: absolute;
  top: 3px;
  left: 0;
  content: "*";
  font-weight: 400;
}
*/

/*=== Mini container .flexblock li === */

[class*="content-"] .flexblock li p {
  font-size: 1.8rem;
  line-height: 3.2rem;
}
.content-right .flexblock.features li,
.content-left .flexblock.features li {
  width: 46%;
}

/*=============================================
7. Promos/Offers (pricing, tagline, CTA...)
=============================================== */

.cta {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  justify-content: center;
  padding-bottom: 3rem;
  overflow-wrap: normal
}

.number,
.cta .benefit {
  padding: 0.8rem 0.8rem 0.8rem 0;
  max-width: 100%;
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  flex-direction: column;
  justify-content: center;
}

.number {
  text-align: center;
}

.cta .benefit {
  max-width: 100%;
  text-align: center;
}

.number span {
  font-size: 8rem;
  line-height: 8rem;
  display: block
}

.number span sup {
  font-size: 4rem;
}

.cta p {
  margin-bottom: 0;
}

@media (min-width: 768px) {
  .number,
  .cta .benefit {
    padding: 4.8rem;
    max-width: 50%;
  }
  .cta .benefit {
    text-align: left;
  }
  .number span {
    font-size: 16rem;
    line-height: 16rem;
  }
  .number span sup {
    font-size: 6rem;
    vertical-align: middle;
  }

  .number.title,
  .cta.p .benefit {
    padding: 4.5rem;
    max-width: 50%;
  }
  .cta.p .benefit {
    text-align: left;
  }
  .number.title span {
    font-size: 2.6rem;
    line-height: 3.2rem;
    width: 26rem;
    text-align: left
  }
  .number.title span sup {
    font-size: 6rem;
    vertical-align: middle;
  }
}


/* --- Header CTA --- */

.cta-cover {
  display: table;
  width: 100%;
}

.cta-cover h1 strong {
  font-weight: 400;
}

@media (min-width: 1024px) {
  .cta-cover h1 {
    max-width: 80%;
    float: left;
  }
  .cta-cover h1 strong {
    display: block;
  }
  .cta-cover .button {
    margin-top: 1.2rem;
  }
  .cta-cover .try {
    text-align: center;
  }
}

@media (max-width: 1023px) {
  .cta-cover .alignright {
    float: none;
  }
}


/*=========================================
8. Work/Resumé/CV <ul class="work">
=========================================== */

h1 + .work,
h2 + .work,
h3 + .work,
p + .work {
  margin-top: 4.8rem;
}

.work {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  flex-direction: column;
  clear: both;
  text-align: left;
}

.work li {
  position: relative;
  -webkit-flex: 1;
  flex: 1;
  list-style: none;
  margin: 0;

}

.work-label {
  float: left;
  width: 100%;
  padding: 0 0 2.4rem;
  font-weight: 600;
}

.work p {
  margin-bottom: 0;
}

.work li a {
  display: block;
  float: left;
  width: 100%;
  height: 100%;
  padding: 2.4rem 0;
}

.work-title {
  display: block;
  width: 75%;
  padding-right: 1.2rem;
}

.work li a p,
.work li:first-child a:hover p:first-child {
  -webkit-transition: .3s;
  transition: .3s;
}
/* ... */

